<resources>
    <string name="app_name">MyChat</string>
    <string name="contatos">Contatos</string>
    <string name="contatos_de">Contatos de</string>
    <string name="erro_executar_operacao">Erro ao executar a operação</string>
    <string name="title_activity_lista_contatos">ListaContatosActivity</string>
    <string name="novo">Novo</string>
    <string name="pesquisar">Buscar contato</string>
    <string name="editar">Editar perfil</string>
    <string name="remover">Remover</string>
    <string name="deseja_remover_contatos">Deseja realmente remover os contato(s) comboBoxSelecionado(s)?</string>
    <string name="remover_contatos">Remover contato(s)</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="informe_nome">Informe o nome</string>
    <string name="informe_apelido">Informe o apelido</string>
    <string name="label_nome">Nome</string>
    <string name="label_apelido">Apelido</string>
    <string name="novo_contato">Novo contato</string>
    <string name="salvar">Salvar</string>
    <string name="criar_perfil">Criar perfil</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="perfil_criado">Perfil criado</string>
    <string name="perfil_atualizado">Perfil atualizado</string>
    <string name="chat_com">Chat com</string>
    <string name="enviar">Enviar</string>
    <string name="mensagem">Mensagem...</string>
    <string name="nova_mensagem_de">Nova mensagem de</string>
</resources>
