<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Busca deve aparecer como botão de ação -->
    <item
        android:id="@+id/menu_pesquisar"
        android:icon="@drawable/ic_action_search"
        android:title="@string/pesquisar"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView" />

    <!-- Demais itens devem aparecer dentro do overflow menu -->
    <item
        android:id="@+id/menu_editar"
        android:showAsAction="never"
        android:title="@string/editar" />
    <item
        android:id="@+id/menu_remover"
        android:showAsAction="never"
        android:title="@string/remover" />
    <item
        android:id="@+id/menu_sair"
        android:showAsAction="never"
        android:title="@string/sair" />
</menu>