<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_dark"
    tools:context="br.edu.ifspsaocarlos.sdm.mychat.view.CriarPerfilActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criar_perfil"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_nome"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        android:layout_marginStart="12dp" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:hint="@string/informe_nome" />

    <TextView
        android:id="@+id/tv_apelido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_apelido"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15sp" />

    <EditText
        android:id="@+id/et_apelido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:hint="@string/informe_apelido" />

    <Button
        android:id="@+id/bt_salvar"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15sp"
        android:background="#C0DB67"
        android:onClick="salvarPerfil"
        android:text="@string/salvar" />

</LinearLayout>
